Fetching sent and received docs
